<resources>
    <string name="app_name">The Money Logs</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="lbl_add_xaction">Add a transaction</string>
    <string name="category">Category</string>
    <string name="notes_description">Previous notes about this transaction</string>
    <string name="lbl_new_notes">New notes about this transaction</string>
    <string name="amount">Amount</string>
    <string name="category_widget_hint">Choose or type the category</string>
    <string name="payee_payor">Payee/Payor</string>
    <string name="lbl_planned">Planned:</string>
    <string name="lbl_actual">Actual:</string>
    <string name="lbl_remaining">Outstanding:</string>
    <string name="lbl_planned_date">Due By</string>
    <string name="lbl_planned_amount">Planned Amount</string>
    <string name="lbl_actual_date">Date Paid</string>
    <string name="lbl_actual_amount">Amount Paid</string>
    <string name="set_date">Set Date</string>
    <string name="lbl_set_date_paid">Set or change the date paid</string>
    <string name="lbl_set_due_date">Set or change the due date</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_paid">Paid</string>
    <string name="paid_so_far">%1$4.2f paid of  </string>
    <string name="choose_month">Other month</string>
    <string name="current_month">Current Month</string>
    <string name="copy_month">Copy Month</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_choose_month">Which prior month is of interest?</string>
    <string name="lbl_ok">OK</string>
    <string name="lbl_from">From:</string>
    <string name="lbl_to">To:</string>
</resources>