<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_detail_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemDetailHostActivity"
    tools:ignore="MergeRootFrame">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:collapsedTitleTextAppearance="@style/TextAppearance.App.CollapsingToolbar.Collapsed"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginBottom="28dp"
            app:expandedTitleMarginStart="72dp"
            app:expandedTitleTextAppearance="@style/TextAppearance.App.CollapsingToolbar.Expanded"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:maxLines="2"
            app:toolbarId="@+id/toolbar">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="0dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="128dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/category_menu"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/category_widget_hint"
            android:labelFor="@id/category_textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <AutoCompleteTextView
                android:id="@+id/category_textview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                android:textColorHint="#616161"
                tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_prior_notes">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/actual_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1.1"
                android:ems="10"
                android:hint="@string/lbl_actual_amount"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp"
                android:selectAllOnFocus="false"
                android:singleLine="true"
                android:textColorHint="#757575" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/actual_date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:contentDescription="@string/lbl_set_date_paid"
                android:text="@string/set_date"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/payee"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:hint="@string/payee_payor"
            android:minHeight="48dp"
            android:minLines="1"
            android:textAlignment="gravity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="wrap"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/category_menu" />

        <ScrollView
            android:id="@+id/item_prior_notes"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#EDE7F6"
            android:minHeight="64sp"
            android:outlineProvider="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_max="64sp"
            app:layout_constraintHeight_min="64sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/item_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
        </ScrollView>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/payee">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/planned_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1.1"
                android:ems="10"
                android:hint="@string/lbl_planned_amount"
                android:textColorHint="#757575"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp"
                android:selectAllOnFocus="false"
                android:singleLine="true" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/planned_date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:contentDescription="@string/lbl_set_due_date"
                android:text="@string/set_date"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>